src/github.com/ebay/beam/query/parser/testdata/legacy/errors/2_terms.res
Query:
?id ?s

Parsed:
Error: unable to parse query: line 1 column 7: expected to find 3 or 4 terms in a query line, you have 2
